# rlhf-book

./: .gitignore  CLAUDE.md  LICENSE-Code.md  LICENSE-Content.md  Makefile  Makefile.zh  README.md  REVIEW-EDITS-PLAN.md  TRANSLATION_GLOSSARY.zh.md  TRANSLATION_PRINCIPLES.zh.md  arxiv_check_results.json  metadata.yml  netlify.toml  prompts-v2.jsonl  prompts.jsonl  pyproject.toml
.claude/skills/: gemini-feedback.md  push-to-pr.md
.github/workflows/: build-and-push.yml  changelog-check.yml  lint.yml  static.yml  test-build.yml
book/: HOSTING.md  README.md  _redirects  metadata.yml
book-zh/: README.md  _redirects  metadata.yml  robots.txt
book-zh/chapters/: 01-introduction.md  02-related-works.md  03-training-overview.md  04-instruction-tuning.md  05-reward-models.md  06-policy-gradients.md  07-reasoning.md  08-direct-alignment.md  09-rejection-sampling.md  10-preferences.md  11-preference-data.md  12-synthetic-data.md  13-tools.md  14-over-optimization.md  15-regularization.md  16-evaluation.md  17-product.md  appendix-00-references.md  appendix-a-definitions.md  appendix-b-style.md  appendix-c-practical.md  bib.bib
book-zh/code/: index.html
book-zh/preorder/: index.html
book-zh/rl-cheatsheet/: index.html
book-zh/scripts/: check_arxiv_publications.py  copy_latex_images.py  kindle-math.lua  normalize_tex_unicode.py  serve.py  strip_unicode_from_markdown.py
book-zh/templates/: chapter.html  epub.html  header-anchors.js  html.html  library.html  nav.js  pdf.tex  style.css  table-scroll.js
book/chapters/: 01-introduction.md  02-related-works.md  03-setup.md  03-training-overview.md  04-instruction-tuning.md  04-optimization.md  05-preferences.md  05-reward-models.md  06-policy-gradients.md  07-reasoning.md  08-direct-alignment.md  08-regularization.md  09-instruction-tuning.md  09-rejection-sampling.md  10-preferences.md  10-rejection-sampling.md  11-policy-gradients.md  11-preference-data.md  12-synthetic-data.md  13-cai.md  13-tools.md  14-over-optimization.md  14-reasoning.md  14.5-tools.md  15-regularization.md  15-synthetic.md  16-evaluation.md  17-product.md  19-character.md  README.md  appendix-00-references.md  appendix-a-definitions.md  appendix-b-style.md  bib.bib  (+1 more)
chapters/: 01-introduction.md  02-1-setup.md  02-4-regularization.md  02-installation.md  02-optimization.md  02-preferences.md  02-related-works.md  03-2-rejection-sampling.md  03-4-direct-alignment.md  03-opt-rejection-sampling.md  03-optimization.md  03-setup.md  04-1-cai.md  04-2-synthetic.md  04-optimization.md  04-related-works.md  05-preferences.md  05-setup.md  06-preference-data.md  07-reward-models.md  08-regularization.md  09-instruction-tuning.md  09-instructions.md  10-rejection-sampling.md  11-policy-gradients.md  12-direct-alignment.md  13-cai.md  14-reasoning.md  14.5-tools.md  15-evaluation.md  15-synthetic.md  16-evaluation.md  16-over-optimization.md  17-over-optimization.md  18-style.md  19-character.md  20-product.md  bib.bib  policy-gradients.md  preference-data.md  (+5 more)
code/: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SPEEDRUN.md  pyproject.toml
code/direct_alignment/: ORPO_SIMPO.md  README.md  REVIEW_REPORT.md  SPARK_HANDOFF_PLAN.md  __init__.py  config.py  data.py  loss.py  profile_memory.py  train.py
code/direct_alignment/configs/: apo_down.yaml  apo_zero.yaml  dpo.yaml  dpo_norm.yaml  ipo.yaml  kto.yaml  orpo.yaml  simpo.yaml
code/direct_alignment/experiments/: 2026-02-08-orpo-simpo.md  ORPO_SIMPO_EXPERIMENT_LOG_2026-02-08.md
code/direct_alignment/experiments/2026-02-08-orpo-simpo/: run_orpo_small.sh  run_simpo_small.sh
code/distillation/: .gitignore  PLAN.md  README.md  __init__.py  config.py  data.py  loss.py  rollout.py  train.py  utils.py
code/distillation/configs/: sdpo.yaml  sdpo_spark.yaml
code/instruction_tuning/: CLAUDE.md  QWEN3_SFT_BUGS.md  README.md  __init__.py  chat_app.py  config.py  train.py  train_qwen_base.py  utils.py
code/instruction_tuning/configs/: sft_olmo2_1b.yaml  sft_qwen3_1p7b.yaml  sft_qwen3_1p7b_v2.yaml
code/policy_gradients/: README.md  __init__.py  algorithms.py  buffer.py  config.py  loss.py  rollout.py  speedrun.py  train.py  utils.py
code/policy_gradients/configs/: cispo.yaml  dapo.yaml  drgrpo.yaml  grpo.yaml  gspo.yaml  maxrl.yaml  ppo.yaml  reinforce.yaml  rloo.yaml  sapo.yaml  sapo_smoke.yaml  sdpo.yaml
code/rejection_sampling/: README.md  __init__.py  config.py  diagnostics.py  preprocess.py  selection.py  train.py  utils.py
code/rejection_sampling/configs/: random_k_overall.yaml  random_per_prompt.yaml  top_k_overall.yaml  top_per_prompt.yaml
code/reward_models/: NOTES.md  NOTES_reward_model_internals.md  README.md  __init__.py  base.py  rm_preflight.py  train_orm.py  train_preference_rm.py  train_prm.py
code/scripts/: run_all_policy_gradients.sh  run_orpo_small.sh  tokenizer_preflight.py  train_qwen3_lr_sweep.sh
code/scripts/speedrun/: LEADERBOARD.md  append_leaderboard.py  remove_leaderboard.py  summary_from_json.py
code/tests/: test_append_leaderboard.py  test_import_smoke.py  test_speedrun.py
diagrams/: Makefile  README.md
preorder/: index.html
scripts/: check_arxiv_publications.py  check_bib.py  check_translation_integrity.py  ensure_pdfoutput.py  generate_library.py  replace_translation_term.py  strip_unicode_from_markdown.py  strip_xetex_branch.py  update_bib_from_arxiv_check.py
teach/: .gitignore  CLAUDE.md  README.md  ch1-introduction.md  ch2-related-works.md  ch3-training-overview.md
templates/: chapter.html  dark-mode.js  html.html  library.html  nav.js  pdf.latex  pdf.tex  style.css
translation/: README.md  TERMS.zh.tsv
(+121 files in other folders)
