# Root pyproject.toml - for diagram generation and book build scripts
# Note: code/ has its own pyproject.toml for ML dependencies
[project]
name = "rlhf-book"
version = "0.1.0"
description = "RLHF Book - diagrams and build scripts"
requires-python = ">=3.11,<3.14"
dependencies = [
    # Diagram generation (diagrams/)
    "matplotlib>=3.10.8",
    "transformers>=4.57.5",
    # Library data generation (book/scripts/generate_library.py)
    "datasets>=2.19.0",
]

[project.optional-dependencies]
skills = [
    "google-genai>=1.63.0",
]
teach = [
    "colloquium @ git+https://github.com/Interconnects-AI/colloquium.git",
]
